--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <a href="#TopOfPage">Vers le bas</a>
     <h2>Bonjour Gomycode</h2>
     <h3>Bonjour Gomycode</h3>
-<h4>Bonjour Gomycode</h4>
+<h4>Bonjour Gomycode </h4>
 <h5>Bonjour Gomycode</h5>
-    this is a <b>OKAY</b>
+    this is a <b>OKAY OKAY</b>
     this is a <i>OKAY</i><br>
     this is a <small>OKAY</small><br>
     this is a <del>OKAY</del>
